css/styles.css
body{
background-color: pink;
  opacity:0.8;
}
h1{
  font-family: 'Montez', cursive;
}
p{
  font-family: 'Nokora', serif;
  color: red;
}
button{
  text-align: center;
  border: 10%;
}

.player-0-panel{
  background-color: #D3D3D3;
}
.hidden{
  display: none;
}
.container,.scoreboard {
  margin-top: 80px;
}

.score,#rollDice {
  font-size: 50px;
}
.container {
  position: relative;
}

.player-name {
  font-size: 40px;
  letter-spacing: 2px;
  font-weight: 300;
  margin-top: 20px;
  margin-bottom: 10px;
  color:red;
}

.slide {
  position: absolute;
  z-index: 1;
  opacity: 0;
  transition: opacity 0.5s;
  color:red;
}

.slide-active {
  width: 100%;
  opacity: 1;
  z-index: 2;
}

.btn {
  font-size: 20px;
  width: 150px;
  cursor: pointer;
  font-weight: 300;
  transition: background-color 0.3s, color 0.3s;
}

.button-group {
  margin-top: 80px;
}

.button-group button {
  margin-bottom: 40px;
  color:red;
}

.scoreboard {
  margin-top: 200px;
  border: 1px solid #ccc;
  width: 180px;
  margin-left: auto;
  margin-right: auto;
  color:red;
}

.current {
  display: block;
  font-size: 50px;
}
#roll,
#hold,
#newGame{
  background-color: blue;
}
#next{
  background-color: grey;
  border-radius: 30px;
}
img{
  width: 100%;
  height: 100%;
}
#color{
  overflow-y: hidden;
}
.left{
  background-color: pink;
  font-size: 120%;
  margin: 0;
}
.right{
  background-color: grey;
}
#title{
  font-size: 350%;
}
#page1{
  margin: 0;
}

